--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </footer>
-        <script src="sciprt.js"></script>
+        <script src="randomcss.js"></script>
 
 
 </body>
